# Bodega-Bluetooth-LE-HASS

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.claude/agents/: ha-integration-developer.md
.github/workflows/: ci.yml
brands/: README.md
custom_components/bodega_ble/: README.md  __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  manifest.json  number.py  parser.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/bodega_ble/translations/: en.json
docs/: HA_INTEGRATION_REVIEW_PLAYBOOK.md
tests/: __init__.py  conftest.py  test_bodega_ble_parser.py  test_config_flow.py  test_coordinator.py  test_imports.py  test_parser.py  test_setup.py
